--- a/AutionApp/Views/Shared/_AdminPartial.cshtml
+++ b/AutionApp/Views/Shared/_AdminPartial.cshtml
@@ -1,12 +1,12 @@
-﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<User> SignInManager
+﻿@inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
+
 <ul class="navbar-nav">
-    @if (true)//(SignInManager.IsSignedIn(User))
+    @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Админка</a>
+            <a class="nav-link text-white" asp-area="" asp-controller="Admin" asp-action="Index">Админка</a>
         </li>
     }
 </ul>
