--- a/AutionApp/Views/Admin/CreateUser.cshtml
+++ b/AutionApp/Views/Admin/CreateUser.cshtml
@@ -1,9 +1,10 @@
 ﻿@model CreateUserViewModel
 @{
     ViewBag.Title = "Добавление пользователя";
+    Layout = "~/Views/Admin/_AdminLayout.cshtml";
 }
 
-<form asp-action="CreateUser" asp-controller="Admin">
+<form asp-action="CreateUser" asp-controller="Admin" method="post">
     <div asp-validation-summary="All" class="text-danger">
 
     </div>
