--- a/AutionApp/Views/Admin/EditUser.cshtml
+++ b/AutionApp/Views/Admin/EditUser.cshtml
@@ -1,6 +1,7 @@
 ﻿@model EditUserViewModel
 @{
     ViewBag.Title = "Редактирование пользователя";
+    Layout = "~/Views/Admin/_AdminLayout.cshtml";
 }
 <form asp-action="EditUser" asp-controller="Admin">
     <input type="hidden" name="userId" value="@Model.Id" />
