--- a/AutionApp/Views/Admin/Index.cshtml
+++ b/AutionApp/Views/Admin/Index.cshtml
@@ -1,12 +1,5 @@
 ﻿@{
+    Layout = "~/Views/Admin/_AdminLayout.cshtml";
 }
 
 <h1>Админка</h1>
-<a class="btn btn-sm btn-primary" asp-action="Users">Пользователи</a>
-<br />
-<a class="btn btn-sm btn-primary" asp-action="Roles">Роли</a>
-<br />
-<a class="btn btn-sm btn-primary">Лоты</a>
-<br />
-<a class="btn btn-sm btn-primary">Категории</a>
-<br />
