--- a/AutionApp/Views/Admin/Roles.cshtml
+++ b/AutionApp/Views/Admin/Roles.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Роли";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Admin/_AdminLayout.cshtml";
 }
 <h1>Роли</h1>
 <p>
