--- a/AutionApp/Views/Home/Index.cshtml
+++ b/AutionApp/Views/Home/Index.cshtml
@@ -1,8 +1,35 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IndexAucViewModel
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@{
+    ViewData["Title"] = "Аукцион";
+}
+<div class="container row">
+    <div class="sidenav col-lg-2" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto sidenav" id="navAccordion">
+            @foreach (var cat in Model.Categories)
+            {
+                <li class="nav-item">
+                    <a class="nav-link" asp-action="Index" asp-route-idCategory="@cat.CategoryId">@cat.Title (@cat.Lots.Count)</a>
+                </li>
+            }
+        </ul>
+    </div>
+    <div class="col-lg-10">
+        <div class="d-flex flex-row justify-content-lg-around auc-title">
+            <h2>Текущие аукционы: </h2>
+            @if (SignInManager.IsSignedIn(User))
+            {
+                <a asp-controller="Lots" asp-action="Create" class="btn btn-light">Добавить новый лот</a>
+            }
+        </div>
+        <div class="lots">
+            @foreach (var lot in Model.Lots)
+            {
+                @await Html.PartialAsync("_LotMiniComponent", lot)
+            }
+        </div>
+    </div>
 </div>
+
