--- a/AutionApp/Views/Shared/_LoginPartial.cshtml
+++ b/AutionApp/Views/Shared/_LoginPartial.cshtml
@@ -6,21 +6,21 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Привет @User.Identity.Name!</a>
+            <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Личный кабинет(@User.Identity.Name)</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Выйти</button>
+                <button type="submit" class="nav-link btn btn-link text-white">Выйти</button>
             </form>
         </li>
     }
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Регистрация</a>
+            <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Register">Регистрация</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Логин</a>
+            <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login">Логин</a>
         </li>
     }
 </ul>
