--- a/AutionApp/Views/_ViewImports.cshtml
+++ b/AutionApp/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using AutionApp
 @using AutionApp.Models
 @using AutionApp.ViewModels
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
