--- a/AutionApp/Views/Lots/Details.cshtml
+++ b/AutionApp/Views/Lots/Details.cshtml
@@ -20,7 +20,7 @@
     </div>
     <div class="d-flex flex-row w-100 justify-content-lg-around">
         @Html.Raw("<img class=\"img - fluid w-25 h-auto\" src=\"data:image/jpeg;base64,"
-       + Convert.ToBase64String(Model.Photo) + "\" />")
++ Convert.ToBase64String(Model.Photo) + "\" />")
     <div class="d-flex flex-column w-75 align-content-center align-items-center align-self-center">
         <h1>@Model.Title</h1>
         <div class="d-flex flex-row w-75 justify-content-between mt-3">
@@ -38,22 +38,75 @@
             </div>
             <div>
                 @{
+                    int stateId = @ViewBag.latestState.StateId;
                     // если на страницу зашел создатель
                     if (userMagager.GetUserId(User) == Model.User.Id)
                     {
-                        <a asp-action="Edit" asp-route-id="@Model.LotId">Edit</a>
+                        // если статус ожидания или закрыт, то можно редактировать
+                        switch (stateId)
+                        {
+                            case (int)State.StateLot.WAITED:
+                            case (int)State.StateLot.CLOSED:
+                                {
+                                    <a class="btn btn-info" asp-action="Edit" asp-route-id="@Model.LotId">Edit</a>
+                                    break;
+                                }
+                            case (int)State.StateLot.OPENED:
+                                {
+                                    <a class="btn btn-danger" asp-action="CloseLot" asp-route-id="@Model.LotId" title="Закрывает лот и удаляет все ставки(лот можно редактировать и выставить повторно)">Закрыть лот</a>
+                                    <a class="btn btn-danger" asp-action="FinishLot" asp-route-id="@Model.LotId" title="Завершает торги как обычно через 1 мин">Досрочно завершить</a>
+                                    break;
+                                }
+                            case (int)State.StateLot.WAITED_SENT: // для создателя
+                                {
+                                    <a class="btn btn-danger" asp-action="UpdateState" asp-route-id="@Model.LotId">Подтвердить отправку лота покупателю</a>
+                                    break;
+                                }
+                            case (int)State.StateLot.WAITED_MONEY: // для создателя
+                                {
+                                    <a class="btn btn-danger" asp-action="UpdateState" asp-route-id="@Model.LotId">Подтвердить получение денег</a>
+                                    break;
+                                }
+                            case (int)State.StateLot.FINISHED: // для создателя
+                                {
+                                    <h5>Сделка успешно проведена!</h5>
+                                    <span class="text-body">Вы можете оставить отзыв</span>
+                                    break;
+                                }
+                        }
                     }
                     else
                     {
-                        var bid = new Bid
+                        if (stateId == (int)State.StateLot.OPENED)
                         {
-                            LotId = Model.LotId,
-                            Time = DateTime.Now,
-                            UserId = userMagager.GetUserId(User),
-                            Rate = (decimal)Html.ViewData["Price"],
-                            Lot = Model
-                        };
-                        await Html.RenderPartialAsync("_CreateBidPartial", bid);
+                            var bid = new Bid
+                            {
+                                LotId = Model.LotId,
+                                Time = DateTime.Now,
+                                UserId = userMagager.GetUserId(User),
+                                Rate = (decimal)Html.ViewData["Price"],
+                                Lot = Model
+                            };
+                            await Html.RenderPartialAsync("_CreateBidPartial", bid);
+                        }
+                        // если зашел покупатель на страницу
+                        if (Model.Sell != null && userMagager.GetUserId(User) == Model.Sell.UserId)
+                        {
+                            switch (stateId)
+                            {
+                                case (int)State.StateLot.DELIVERED: // для покупателя
+                                    {
+                                        <a class="btn btn-danger" asp-action="UpdateState" asp-route-id="@Model.LotId">Я получил лот</a>
+                                        break;
+                                    }
+                                case (int)State.StateLot.FINISHED: // для покупателя
+                                    {
+                                        <h5>Сделка успешно проведена!</h5>
+                                        <span class="text-body">Вы можете оставить отзыв</span>
+                                        break;
+                                    }
+                            }
+                        }
                     }
                 }
             </div>
@@ -61,7 +114,7 @@
         <div>
             <ul class="">
                 @{ if (Model.TimeStart > DateTime.Now)
-                    {
+                        {
                         <li class="list-group-item-light">
                             <span>Торги начнутся: @Model.TimeStart</span>
                         </li>
@@ -146,7 +199,7 @@
                         <tr  class="d-table-row"><th>Статус</th><th>Дата</th></tr>
                     </thead>
                     <tbody>
-                        @foreach (var state in Model.States)
+                        @foreach (var state in Model.States.OrderByDescending(s=>s.Time))
                         {
                             <tr  class="d-table-row">
                                 <td>@state.State.Title</td>
