--- a/AutionApp/Views/Shared/_Layout.cshtml
+++ b/AutionApp/Views/Shared/_Layout.cshtml
@@ -18,14 +18,11 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row">
-                    <partial name="_AdminPartial" />
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Аукционы" asp-action="Index">Home</a>
-                        </li>
-                    </ul>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
+                    <ul class="navbar-nav flex-grow-1">
+                    </ul>
+                    <partial name="_AdminPartial" />
                 </div>
             </div>
         </nav>
