--- a/AutionApp/Views/Lots/Details.cshtml
+++ b/AutionApp/Views/Lots/Details.cshtml
@@ -114,7 +114,7 @@
         <div>
             <ul class="">
                 @{ if (Model.TimeStart > DateTime.Now)
-                        {
+                    {
                         <li class="list-group-item-light">
                             <span>Торги начнутся: @Model.TimeStart</span>
                         </li>
@@ -124,7 +124,19 @@
                     <span>Статус: @ViewBag.latestState.State.Title</span>
                 </li>
                 <li class="list-group-item-light">
-                    <span>Торги заканчиваются: @Model.TimeEnd</span>
+                    <span>
+                        Торги заканчиваются:
+                        @{
+                            @if (Model.TimeEnd < DateTime.Now)
+                            {
+                                <b>А уже всё!</b>
+                            }
+                            else
+                            {
+                                <b>Model.TimeEnd</b>
+                            }
+                        }
+                    </span>
                 </li>
                 <li class="list-group-item-light">
                     @{ if (Model.Bids.Count() == 0)
