--- a/AutionApp/Views/Admin/_AdminLayout.cshtml
+++ b/AutionApp/Views/Admin/_AdminLayout.cshtml
@@ -14,7 +14,7 @@
         <a class="btn nav-link text-dark" asp-action="Categories">Категории</a>
     </li>
     <li class="nav-item">
-        <a class="btn nav-link text-dark" asp-action="Lots">Лоты</a>
+        <a class="btn nav-link text-dark" asp-controller="Lots" asp-action="Index">Лоты</a>
     </li>
 </ul>
 @RenderBody()
