--- a/AutionApp/Views/Lots/Edit.cshtml
+++ b/AutionApp/Views/Lots/Edit.cshtml
@@ -14,6 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="LotId" />
             <input type="hidden" asp-for="UserId" />
+            <input type="hidden" asp-for="Photo" />
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
