--- a/AutionApp/Views/Shared/_lotsTable.cshtml
+++ b/AutionApp/Views/Shared/_lotsTable.cshtml
@@ -61,9 +61,7 @@
                     @Html.DisplayFor(modelItem => item.User.Id)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.LotId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.LotId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.LotId">Delete</a>
+                    <a asp-action="Details" asp-controller="Lots" asp-route-id="@item.LotId">Details</a> |
                 </td>
             </tr>
         }
